{
  "screens": {
    "home": {
      "header": {
        "start_slideshow": "START SLIDESHOW",
        "stop_slideshow": "STOP SLIDESHOW"
      },
      "locale_selector": {
        "title": "Select Language",
        "options": {
          "en": "EN",
          "es": "ES",
          "fr": "FR"
        }
      }
    },
    "painting": {
      "lightbox": {
        "open_cta": "VIEW IMAGE",
        "close_cta": "CLOSE"
      },
      "lightbox_cta": "VIEW IMAGE",
      "source_link": "GO TO SOURCE"
    }
  }
}
